Update 3.11 & nightly installer options

--- a/_includes/manuals/3.11/3.2.2_installer_options.md
+++ b/_includes/manuals/3.11/3.2.2_installer_options.md
@@ -34,6 +34,10 @@ More information about compute resources can be found in the [Compute Resources 
     </thead>
     <tbody>
       <tr>
+        <td style='white-space:nowrap'>--[no-]enable-apache-mod-status</td>
+        <td>Enable 'apache_mod_status' puppet module</td>
+      </tr>
+      <tr>
         <td style='white-space:nowrap'>--[no-]enable-foreman</td>
         <td>Enable 'foreman' puppet module</td>
       </tr>
@@ -142,10 +146,6 @@ More information about compute resources can be found in the [Compute Resources 
         <td>Enable 'foreman_plugin_google' puppet module (<a href="https://github.com/theforeman/foreman_google">foreman_google</a>)</td>
       </tr>
       <tr>
-        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-hooks</td>
-        <td>Enable 'foreman_plugin_hooks' puppet module (<a href="https://github.com/theforeman/foreman_hooks">foreman_hooks</a>)</td>
-      </tr>
-      <tr>
         <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-host-extra-validator</td>
         <td>Enable 'foreman_plugin_host_extra_validator' puppet module (<a href="https://github.com/theforeman/foreman_host_extra_validator">foreman_host_extra_validator</a>)</td>
       </tr>
@@ -204,10 +204,6 @@ More information about compute resources can be found in the [Compute Resources 
       <tr>
         <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-salt</td>
         <td>Enable 'foreman_plugin_salt' puppet module (<a href="/plugins/foreman_salt">foreman_salt</a>)</td>
-      </tr>
-      <tr>
-        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-setup</td>
-        <td>Enable 'foreman_plugin_setup' puppet module (<a href="https://github.com/theforeman/foreman_setup">foreman_setup</a>)</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-snapshot-management</td>
@@ -340,6 +336,18 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
     </thead>
     <tbody>
       <tr>
+        <td style='white-space:nowrap'>--apache-mod-status-extended-status</td>
+        <td>Determines whether to track extended status information for each request, via the ExtendedStatus directive.</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--apache-mod-status-requires</td>
+        <td>A Variant type that can be: - String with: - '' or 'unmanaged' - Host auth control done elsewhere - 'ip <List of IPs>' - Allowed IPs/ranges - 'host <List of names>' - Allowed names/domains - 'all [granted|denied]' - Array of strings with ip or host as above - Hash with following keys: - 'requires' - Value => Array as above - 'enforce' - Value => String 'Any', 'All' or 'None' This encloses "Require" directives in "<Require(Any|All|None)>" block Optional - If unspecified, "Require" directives follow current flow</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--apache-mod-status-status-path</td>
+        <td>Path assigned to the Location directive which defines the URL to access the server status.</td>
+      </tr>
+      <tr>
         <td style='white-space:nowrap'>--foreman-apache</td>
         <td>Configure Apache as a reverse proxy for the Foreman server</td>
       </tr>
@@ -381,7 +389,7 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       </tr>
       <tr>
         <td style='white-space:nowrap'>--foreman-db-pool</td>
-        <td>Database 'production' size of connection pool. When running as a reverse proxy, the value of `$foreman_service_puma_threads_max` is used if it's higher than `$db_pool`.</td>
+        <td>Database 'production' size of connection pool. If the value is not set, it will be set by default to the amount of puma threads + 4 (for internal system threads)</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--foreman-db-port</td>
@@ -540,6 +548,10 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>If ipa_authentication is true, should the installer manage SSSD? You can disable it if you use another module for SSSD configuration</td>
       </tr>
       <tr>
+        <td style='white-space:nowrap'>--foreman-ipa-sssd-default-realm</td>
+        <td>If ipa_manage_sssd is true, set default_domain_suffix option in sssd configuration to this value to allow logging in without having to provide the domain name.</td>
+      </tr>
+      <tr>
         <td style='white-space:nowrap'>--foreman-keycloak</td>
         <td>Enable Keycloak support. Note this is limited to configuring Apache and still relies on manually running keycloak-httpd-client-install</td>
       </tr>
@@ -594,6 +606,14 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       <tr>
         <td style='white-space:nowrap'>--foreman-plugin-version</td>
         <td>Foreman plugins package version, it's passed to ensure parameter of package resource can be set to 'installed', 'latest', 'present' only</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-provisioning-ct-location</td>
+        <td>The location of the binary to call when transpiling CoreOS templates.</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-provisioning-fcct-location</td>
+        <td>The location of the binary to call when transpiling Fedora CoreOS templates.</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--foreman-rails-cache-store</td>
@@ -1068,6 +1088,10 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>Whether to ensure the $puppet_group exists.  Also ensures group owner of ssl keys and certs is $puppet_group Not applicable when ssl is false.</td>
       </tr>
       <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-manage-service</td>
+        <td>control the service, whether it should be started / enabled or not. useful, if the service should be managed by a cluster software e.g. corosync / pacemaker</td>
+      </tr>
+      <tr>
         <td style='white-space:nowrap'>--foreman-proxy-oauth-consumer-key</td>
         <td>OAuth key to be used for REST interaction</td>
       </tr>
@@ -1344,6 +1368,10 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>Use a different ca server. Should be either a string with the location of the ca_server or 'false'.</td>
       </tr>
       <tr>
+        <td style='white-space:nowrap'>--puppet-certificate-revocation</td>
+        <td>Whether certificate revocation checking should be enabled, and what level of checking should be performed</td>
+      </tr>
+      <tr>
         <td style='white-space:nowrap'>--puppet-classfile</td>
         <td>The file in which puppet agent stores a list of the classes associated with the retrieved configuration.</td>
       </tr>
@@ -1484,8 +1512,8 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>A hash of additional settings. Example: {trusted_node_data => true, ordering => 'manifest'}</td>
       </tr>
       <tr>
-        <td style='white-space:nowrap'>--puppet-server-admin-api-whitelist</td>
-        <td>The whitelist of clients that can query the puppet-admin-api endpoint Defaults to [ '127.0.0.1', '::1', $::ipaddress ]</td>
+        <td style='white-space:nowrap'>--puppet-server-admin-api-allowlist</td>
+        <td>The allowlist of clients that can query the puppet-admin-api endpoint Defaults to [ '127.0.0.1', '::1', $::ipaddress ]</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-allow-header-cert-info</td>
@@ -1500,6 +1528,14 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>Allow CA to sign certificate requests that have authorization extensions Defaults to false</td>
       </tr>
       <tr>
+        <td style='white-space:nowrap'>--puppet-server-ca-allow-auto-renewal</td>
+        <td>Enable the auto renewal for client certificates Defaults to false</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--puppet-server-ca-allow-auto-renewal-cert-ttl</td>
+        <td>Set the auto renewal interval for client certificates Defaults to 60d</td>
+      </tr>
+      <tr>
         <td style='white-space:nowrap'>--puppet-server-ca-allow-sans</td>
         <td>Allow CA to sign certificate requests that have Subject Alternative Names Defaults to false</td>
       </tr>
@@ -1508,12 +1544,12 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>Whether client certificates are needed to access the puppet-admin api Defaults to true</td>
       </tr>
       <tr>
-        <td style='white-space:nowrap'>--puppet-server-ca-client-self-delete</td>
-        <td>Adds a rule to auth.conf, that allows a client to delete its own certificate Defaults to false</td>
+        <td style='white-space:nowrap'>--puppet-server-ca-client-allowlist</td>
+        <td>The allowlist of client certificates that can query the certificate-status endpoint Defaults to [ '127.0.0.1', '::1', $::ipaddress ]</td>
       </tr>
       <tr>
-        <td style='white-space:nowrap'>--puppet-server-ca-client-whitelist</td>
-        <td>The whitelist of client certificates that can query the certificate-status endpoint Defaults to [ '127.0.0.1', '::1', $::ipaddress ]</td>
+        <td style='white-space:nowrap'>--puppet-server-ca-client-self-delete</td>
+        <td>Adds a rule to auth.conf, that allows a client to delete its own certificate Defaults to false</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-ca-crl-sync</td>
@@ -1648,12 +1684,16 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>Git repository group</td>
       </tr>
       <tr>
-        <td style='white-space:nowrap'>--puppet-server-git-repo-mode</td>
-        <td>Git repository mode</td>
+        <td style='white-space:nowrap'>--puppet-server-git-repo-hook-mode</td>
+        <td>Git repository hook mode</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-git-repo-path</td>
-        <td>Git repository path</td>
+        <td>Git repository path on disk</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--puppet-server-git-repo-umask</td>
+        <td>Umask used during git operations</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-git-repo-user</td>
@@ -1680,8 +1720,8 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>Bind ip address of the puppetserver</td>
       </tr>
       <tr>
-        <td style='white-space:nowrap'>--puppet-server-jolokia-metrics-whitelist</td>
-        <td>The whitelist of clients that can query the jolokia /metrics/v2 endpoint</td>
+        <td style='white-space:nowrap'>--puppet-server-jolokia-metrics-allowlist</td>
+        <td>The allowlist of clients that can query the jolokia /metrics/v2 endpoint</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-jruby-gem-home</td>
@@ -1701,7 +1741,7 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-jvm-java-bin</td>
-        <td>Set the default java to use.</td>
+        <td>Set the default java to use. If unspecified, it will be derived from the Puppet version.</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-jvm-max-heap-size</td>
@@ -2010,6 +2050,10 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       <tr>
         <td style='white-space:nowrap'>--foreman-plugin-puppetdb-ssl-private-key</td>
         <td>Private key file which will be used to connect to the PuppetDB API.</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-plugin-remote-execution-cockpit-ensure</td>
+        <td>Specify the package state, or absent to remove it</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--foreman-plugin-remote-execution-cockpit-origins</td>
