--- a/_includes/manuals/3.11/3.6_upgrade.md
+++ b/_includes/manuals/3.11/3.6_upgrade.md
@@ -210,7 +210,7 @@ To apply these changes, run the installer again without options
 
 ##### Step 4 - Restart
 
-Start the application server. This is redundant if you previously ran `foreman-installer` in step 3B.
+Start the application server. This is redundant if you previously ran `foreman-installer` in step 3C.
 
 <div class="upgrade_os upgrade_os_none">
   <i>*No operating system selected.*</i>
