Add 3.11.1 release notes

--- a/_includes/manuals/3.11/1.2_release_notes.md
+++ b/_includes/manuals/3.11/1.2_release_notes.md
@@ -43,6 +43,19 @@ Clients will remain supported.
 
 For more details and discussion, see https://community.theforeman.org/t/drop-support-for-running-on-el8-with-foreman-3-13/38083.
 
+### Release notes for 3.11.1
+#### Foreman - Tests
+* Report renderer tests fail depending on the libyaml version ([#37613](https://projects.theforeman.org/issues/37613))
+
+#### Foreman - Unattended installations
+* HostCommon.crypt_passwords reencrypts Base64 based passwords for Grub, leading to errors ([#37610](https://projects.theforeman.org/issues/37610))
+* Change Linux password hashing default from sha256 to sha512 ([#36650](https://projects.theforeman.org/issues/36650))
+
+#### Smart Proxy - DHCP
+* Invalid value for Integer(): “#Resolv::DNS::Resource::IN::A:0x00007fnnnnnnnnn” ([#37621](https://projects.theforeman.org/issues/37621))
+
+*A full list of changes in 3.11.1 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12]=1838)*
+
 ### Release notes for 3.11.0
 #### Foreman - API
 * API 'build_pxe_default' is broken when a taxonomy is passed ([#37439](https://projects.theforeman.org/issues/37439))
