--- a/_includes/manuals/3.12/1.2_release_notes.md
+++ b/_includes/manuals/3.12/1.2_release_notes.md
@@ -8,7 +8,127 @@ This section will be updated prior to the next release.
 
 ### Deprecations
 
-### Release Notes
+### Release notes for 3.12.0
+
+#### Foreman
+* Add product host count to 'Subscription - General Report' ([#37756](https://projects.theforeman.org/issues/37756))
+* Fix audit message about removing records ([#37734](https://projects.theforeman.org/issues/37734))
+* Change All Hosts kebab menu to match mockup [Foreman] ([#37675](https://projects.theforeman.org/issues/37675))
+* Invalid MAC address error message appears twice while editing interface ([#37651](https://projects.theforeman.org/issues/37651))
+* Curl command cannot be rendered during host registration due to Loc/Org mismatch ([#37640](https://projects.theforeman.org/issues/37640))
+* FFI 1.17.0+ requires Rubygems 3.3.22+ for installation, breaking Ruby 2.7 source installs ([#37607](https://projects.theforeman.org/issues/37607))
+* Monitor -&gt; Host statusses shows "Pending Installation" instead of Installed ([#37589](https://projects.theforeman.org/issues/37589))
+* [RFE] Provisioning Templates or RHEL 9 should have option timesource ([#37581](https://projects.theforeman.org/issues/37581))
+* Improved "EFI local chainloading" on SecureBoot enabled hosts not working for all distribution ([#37562](https://projects.theforeman.org/issues/37562))
+* As a web UI user, I can select multiple hosts and perform a bulk change of the hostgroup ([#37551](https://projects.theforeman.org/issues/37551))
+* per_page=all doesn't work for parameters of subnets, domains, organizations.... ([#37550](https://projects.theforeman.org/issues/37550))
+* HostsIndex page should gracefully handle when 'Any organization' is selected ([#37548](https://projects.theforeman.org/issues/37548))
+* Append domain name setting ([#37532](https://projects.theforeman.org/issues/37532))
+* cleanup media dup ([#37527](https://projects.theforeman.org/issues/37527))
+* Plugins are finalized before seeds are executed ([#37503](https://projects.theforeman.org/issues/37503))
+* Unify sending built status in host_init_config ([#37495](https://projects.theforeman.org/issues/37495))
+* Fix Style/CaseLikeIf cop ([#37458](https://projects.theforeman.org/issues/37458))
+* Cloudinit default generates invalid yaml output ([#37433](https://projects.theforeman.org/issues/37433))
+* Fix Style/ExplicitBlockArgument cop ([#37428](https://projects.theforeman.org/issues/37428))
+* Rubocop minitest rules fix ([#37426](https://projects.theforeman.org/issues/37426))
+*  Fix Style/RedundantRegexpEscape cop ([#37424](https://projects.theforeman.org/issues/37424))
+*  Open Fix Style/HashEachMethods cop ([#37423](https://projects.theforeman.org/issues/37423))
+* Fix Style/AccessorGrouping cop ([#37420](https://projects.theforeman.org/issues/37420))
+* As a web UI user, I can select multiple hosts and perform build actions ([#37395](https://projects.theforeman.org/issues/37395))
+* Improve "EFI local chainloading" on SecureBoot enabled hosts ([#37345](https://projects.theforeman.org/issues/37345))
+* Help page should not link libera chat anymore after the migration to matrix ([#37086](https://projects.theforeman.org/issues/37086))
+* Possibility to use selenium remote driver ([#36978](https://projects.theforeman.org/issues/36978))
+* Upload facts after host provisioning ([#36886](https://projects.theforeman.org/issues/36886))
+* Fix parsing of Ubuntu version in fact parsers ([#36547](https://projects.theforeman.org/issues/36547))
+
+#### Foreman - Compute resources - VMware
+* Feature Request: Support of NVMe controllers for VMware ([#34839](https://projects.theforeman.org/issues/34839))
+
+#### Foreman - Compute resources - libvirt
+* Drop CPU model for libvirt VM creation ([#36999](https://projects.theforeman.org/issues/36999))
+
+#### Foreman - Host registration
+* Host remains in build mode during registration when setup_insights is set to true ([#37720](https://projects.theforeman.org/issues/37720))
+* Find methods for taxonomies ([#37702](https://projects.theforeman.org/issues/37702))
+
+#### Foreman - JavaScript stack
+* Drop coffee-rails dependency ([#37583](https://projects.theforeman.org/issues/37583))
+* Content Columns can disappear from the Manage Columns widget on the redesigned All Hosts Page ([#37553](https://projects.theforeman.org/issues/37553))
+* Change I18n loading from import to require  ([#37300](https://projects.theforeman.org/issues/37300))
+
+#### Foreman - Organizations and Locations
+* Smart Proxy forces association to all Locations unless Puppet is enabled on the proxy ([#29450](https://projects.theforeman.org/issues/29450))
+
+#### Foreman - Proxy gateway
+* Test Connection' button in 'New HTTP Proxy' returns success with invalid URL ([#36919](https://projects.theforeman.org/issues/36919))
+
+#### Foreman - Settings
+* The description of a setting Instance color contains additional dot ([#37597](https://projects.theforeman.org/issues/37597))
+
+#### Foreman - Templates
+* Create a way to refresh CA certificates on hosts that are managed by Katello ([#37601](https://projects.theforeman.org/issues/37601))
+* RHEL registration template ignores host_parm subscription_manager_org  ([#37496](https://projects.theforeman.org/issues/37496))
+*  Templates - cloned_from reference ([#37059](https://projects.theforeman.org/issues/37059))
+* Template render error when no PXELoader is selected ([#36626](https://projects.theforeman.org/issues/36626))
+
+#### Foreman - Tests
+* nic_managed factory can create an IP outside of its subnet ([#37711](https://projects.theforeman.org/issues/37711))
+* Report renderer tests fail depending on the libyaml version ([#37613](https://projects.theforeman.org/issues/37613))
+* with_temporary_settings test helper doesn't clean up properly ([#37558](https://projects.theforeman.org/issues/37558))
+
+#### Foreman - Unattended installations
+* Use SHA512 for root password hashing when no OS is set ([#37614](https://projects.theforeman.org/issues/37614))
+* HostCommon.crypt_passwords reencrypts Base64 based passwords for Grub, leading to errors ([#37610](https://projects.theforeman.org/issues/37610))
+* Extend Windows support in templates ([#36495](https://projects.theforeman.org/issues/36495))
+
+#### Foreman - Web Interface
+* Add button linking to new All Hosts UI ([#37690](https://projects.theforeman.org/issues/37690))
+* Show complete hostgroup name in host overview and table ([#37648](https://projects.theforeman.org/issues/37648))
+* Tab title missing in tableindexpage ([#37645](https://projects.theforeman.org/issues/37645))
+* Pagination doesnt always update between react pages ([#37644](https://projects.theforeman.org/issues/37644))
+* Template render error when host has .ics domain name ([#37623](https://projects.theforeman.org/issues/37623))
+* Host details - Fix append domain setting ([#37584](https://projects.theforeman.org/issues/37584))
+* use textarea in host comment edit ([#37582](https://projects.theforeman.org/issues/37582))
+* remove space between table buttons ([#37578](https://projects.theforeman.org/issues/37578))
+* Foreman Table columns sort is inconsistent  ([#37575](https://projects.theforeman.org/issues/37575))
+* Cancel build shows notification with host id instead of hostname on the new UI of Red Hat Satellite ([#37556](https://projects.theforeman.org/issues/37556))
+* New All Hosts page ignores pagination url params on first load ([#37485](https://projects.theforeman.org/issues/37485))
+* Add Power Status column to new All Hosts page ([#37478](https://projects.theforeman.org/issues/37478))
+* Extend TableIndexPage and TableHooks with new capabilities for All Hosts page ([#37398](https://projects.theforeman.org/issues/37398))
+
+#### Installer
+* After an OS version upgrade, the GUI still shows the old/wrong Operating System version ([#37726](https://projects.theforeman.org/issues/37726))
+* Disable port 8443 by default ([#37701](https://projects.theforeman.org/issues/37701))
+* Installler doesn't handle Puppetserver 8 upgrade ([#37686](https://projects.theforeman.org/issues/37686))
+* Correct docroot for Content Proxies's Apache vhost ([#37620](https://projects.theforeman.org/issues/37620))
+* Possibility to set puppet version in gitlab CI ([#37568](https://projects.theforeman.org/issues/37568))
+
+#### Installer - Foreman modules
+* Pasing --foreman-proxy-content-enable-docker false can leave smart_proxy_container_gateway in an inconsistent state ([#37707](https://projects.theforeman.org/issues/37707))
+* DNS forwarders aren't validated ([#37604](https://projects.theforeman.org/issues/37604))
+
+#### Installer - foreman-installer script
+* Add check for ipv6.disable=1 in /proc/cmdline because it's known to break installations ([#37693](https://projects.theforeman.org/issues/37693))
+
+#### Packaging - RPMs
+* Make foreman-installer-katello pull in foreman-maintain ([#37663](https://projects.theforeman.org/issues/37663))
+
+#### SELinux - Plugins
+* Boot disk based Provisioning fails to generate ISO image for instance clietn.example.com: ERF42-8093 [Foreman::Exception]: ISO build failed ([#37497](https://projects.theforeman.org/issues/37497))
+
+#### Smart Proxy
+* Maximum sessions limit reached on iDRAC using Redfish as BMC provider ([#37486](https://projects.theforeman.org/issues/37486))
+
+#### Smart Proxy - DHCP
+* invalid value for Integer(): “#Resolv::DNS::Resource::IN::A:0x00007fnnnnnnnnn” ([#37621](https://projects.theforeman.org/issues/37621))
+
+#### Smart Proxy - Packaging
+* Pin FFI to &lt; 1.17 on Ruby 2.x ([#37624](https://projects.theforeman.org/issues/37624))
+
+#### Smart Proxy - Registration
+* Host registration with repositories fails because smart-proxy cannot convert arrays to string ([#37631](https://projects.theforeman.org/issues/37631))
+
+*A full list of changes in 3.12.0 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12]=1836)*
 
 ### Contributors
 
