Add contributors to release notes

--- a/_includes/manuals/3.12/1.2_release_notes.md
+++ b/_includes/manuals/3.12/1.2_release_notes.md
@@ -134,6 +134,6 @@ This section will be updated prior to the next release.
 
 We'd like to thank the following people who contributed to the Foreman {{page.version}} release:
 
-<!-- update scripts/committers.rb with the correct versions and dates and fill this in -->
+Adam Lazik,Adam Růžička,Aneta Šteflová Petrová,Archana Kumari,Beat Gaetzi,Bernhard Suttner,Chris Roberts,Cole Higgins,Dirk Götz,Eric Helms,Evgeni Golov,Ewoud Kohl van Wijngaarden,Girija Soni,Griffin-Sullivan,Jan Löser,Jeremy Lenz,Joniel Pasqualetto,Laurent Bigonville,Leos Stejskal,Marek Hulán,Maria Agaphontzev,Markus Reisner,Martin Alfke,Maximilian Kolb,Nadja Heitmann,Nofar Alfassi,Oleh Fedorenko,Partha Aji,Patrick Creech,Quinn James,RhinoX,Richard Stempfl,Romuald Conty,Samir Jha,Sayan Das,Shimon Shtein,William Bradford Clark,akumari,dosas,girijaasoni,kmalyjur,omahs
 
 As well as all users who helped test releases, report bugs and provide feedback on the project.
